// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox Rendering disabled DropDown renders according to design 1`] = `
<div
  className="sc-bdVaJa lhrPED"
>
  <label
    className="sc-bwzfXH ebnOHd"
    htmlFor="Ativo"
  >
    Ativo:
  </label>
  <label
    className="sc-htpNat jMFgIO"
    id="AtivoValue"
    name="AtivoValue"
  >
    WINM20
  </label>
</div>
`;

exports[`TextBox Rendering enabled DropDown renders according to design 1`] = `
<div
  className="sc-bdVaJa lhrPED"
>
  <label
    className="sc-bwzfXH ebnOHd"
    htmlFor="Ativo"
  >
    Ativo:
  </label>
  <input
    className="sc-bxivhb gzDdYd"
    id="Ativo"
    name="Ativo"
    onChange={[Function]}
    type="text"
  />
</div>
`;
